[gd_scene load_steps=4 format=3 uid="uid://dqbf2f5u4tq66"]

[ext_resource type="Script" path="res://ver_1/character/hero/Bassheart/bassheart_freeze.gd" id="1_sjmx2"]
[ext_resource type="Texture2D" uid="uid://bj87if3xp5tym" path="res://icon.svg" id="2_tko0v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ww1ts"]
size = Vector2(120, 20)

[node name="BassheartFreeze" type="Node2D"]
script = ExtResource("1_sjmx2")
initial_dmg = 10
initial_cd = 4
charge_duration = 0.5
area_multiplier = 5.0
freeze_duration_multiplier = 1.5
damage_multiplier = 3.0
freeze_duration = 3.0
unfreeze_dmg = 100
dmg_threshold = 50

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HitBox"]
scale = Vector2(12, 6)
polygon = PackedVector2Array(0, -2, 10, -10, 10, 10, 0, 2)

[node name="IndicatorBox" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="IndicatorBox"]
position = Vector2(60.25, -1)
shape = SubResource("RectangleShape2D_ww1ts")
debug_color = Color(0.52991, 0.535456, 0.550666, 0.42)

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(64, -24)
rotation = -0.401426
scale = Vector2(1, 0.199306)
skew = -0.0872666
texture = ExtResource("2_tko0v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(60.5905, 22.8726)
rotation = 0.392699
scale = Vector2(1, 0.199306)
skew = -0.0872665
texture = ExtResource("2_tko0v")

[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
